--- a/src/components/ui/ProductDetail/ProducDetailView/ProductOrder/ProductOrder.module.scss
+++ b/src/components/ui/ProductDetail/ProducDetailView/ProductOrder/ProductOrder.module.scss
@@ -1,5 +1,6 @@
 .order {
 	padding: calc(30rem / 16);
+	padding-right: calc(50rem/16);
 	box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.1);
 
 	@media (max-width: calc(767px)) {
