--- a/src/components/ui/common/BlackButton/BlackButton.module.scss
+++ b/src/components/ui/common/BlackButton/BlackButton.module.scss
@@ -8,6 +8,7 @@
 	align-items: center;
 	justify-content: center;
 	text-align: center;
+	width: 100%;
 	// flex: 0 1 228px;
 	padding: 0.3rem;
 	height: calc(56rem / 16);
@@ -23,4 +24,9 @@
 	line-height: 230%;
 
 	cursor: pointer;
+}
+
+.disabled {
+	opacity: 0.6;
+	pointer-events: none;
 }
