--- a/src/components/ui/Footer/Footer.module.scss
+++ b/src/components/ui/Footer/Footer.module.scss
@@ -27,6 +27,9 @@
 			column-gap: calc(100rem / 16);
 			justify-content: space-between;
 		}
+		@media (max-width: calc(767rem/16)) {
+			flex-direction: column;
+		}
 		@media (max-width: calc(588rem/16)) {
 			justify-content: center;
 		}
