--- a/src/components/ui/NestedMenu/NestedMenu.module.scss
+++ b/src/components/ui/NestedMenu/NestedMenu.module.scss
@@ -2,7 +2,7 @@
 
 .nested_menu {
 	background-color: $black;
-
+	position: relative;
 	@media (max-width: 47.99em) {
 		display: none;
 		position: relative;
@@ -51,7 +51,7 @@
 		padding: 0;
 		width: 100vw;
 		left: 0;
-		z-index: 100;
+		z-index: 200;
 	}
 
 	&__body {
