--- a/src/components/ui/ProductCatalog/ProductListView/ProductListView.module.scss
+++ b/src/components/ui/ProductCatalog/ProductListView/ProductListView.module.scss
@@ -13,19 +13,26 @@
 	display: flex;
 	align-self: flex-start;
 	flex-wrap: wrap;
-
 	row-gap: calc(20rem / 16);
+
+	@media (max-width: calc(840rem/16)) {
+		justify-content: space-around;
+	}
+
 	& > * {
 		flex: 0 0 20%;
 		transition: scale 0.2s ease 0.02s;
 
 		@media (max-width: calc(2000rem/16)) {
-			flex: 0 0 33%;
+			flex: 0 0 33.33%;
 		}
 
-		@media (max-width: calc(660rem/16)) {
-			flex: 0 0 50%;
+		@media (max-width: calc(840rem/16)) {
+			flex: 1 1 40%;
 		}
+		// @media (max-width: calc(540rem/16)) {
+		// 	flex: 0 1 %;
+		// }
 
 		&:hover {
 			position: relative;
