--- a/src/components/ui/Footer/Footer.module.scss
+++ b/src/components/ui/Footer/Footer.module.scss
@@ -14,7 +14,10 @@
 		padding: calc(35rem / 16) 0 calc(30rem / 16) 0;
 
 		&_icons {
-			margin-right: 0.625rem;
+			padding: 2px;
+			margin-right: 0.5rem;
+			width: 24px;
+			height: 24px;
 		}
 	}
 
@@ -37,6 +40,7 @@
 			flex: 0 1 24%;
 			display: flex;
 			flex-direction: column;
+			row-gap: 0.625rem;
 			& > a:not(:first-child) {
 				color: rgba(255, 255, 255, 0.8);
 				font-size: calc(18rem / 16);
