--- a/src/components/ui/Main/Lanterns/LanternInfo.module.scss
+++ b/src/components/ui/Main/Lanterns/LanternInfo.module.scss
@@ -48,8 +48,12 @@
 
 	&__button {
 		grid-area: button;
-		margin: 0;
+		margin: 0 50px;
 		padding: 0;
+
+		@media (max-width: 480px) {
+			margin: 0 15px;
+		}
 	}
 
 	&__image {
