--- a/src/components/ui/Main/Lanterns/LanternInfo.module.scss
+++ b/src/components/ui/Main/Lanterns/LanternInfo.module.scss
@@ -48,11 +48,14 @@
 
 	&__button {
 		grid-area: button;
-		margin: 0 50px;
+		margin: 50px 0 20px 0;
 		padding: 0;
 
 		@media (max-width: 480px) {
 			margin: 0 15px;
+		}
+		@media (max-width: calc(1010rem/16)) {
+			margin: 0 50px;
 		}
 	}
 
